Client/config/csohub-cso-strategy-dev.yaml
kind: "Service"
apiVersion: "v1"
metadata:
  name: "csohub"
spec:
  ports:
    -
      name: "web"
      protocol: "TCP"
      port: 8080
  selector:
    name: "csohub"
  type: "ClusterIP"
  sessionAffinity: "None"
---
kind: "DeploymentConfig"
apiVersion: "v1"
metadata:
  name: "csohub"
spec:
  template:
    metadata:
      labels:
        name: "csohub"
      annotations:
        app_version: 'latest'
    spec:
      containers:
        -
          name: "csohub"
          image: "containers.cisco.com/it_gats_cta/cso-hub_csohub:__IMAGETAG__"
          ports:
            -
              containerPort: 8080
              protocol: "TCP"
          volumeMounts:
            -
              name: podinfo
              mountPath: /etc/metadata
              readOnly: false
          imagePullPolicy: "IfNotPresent"
          securityContext:
            capabilities: {}
            privileged: false
          #readinessProbe:
          #  httpGet:
          #    path: "/"
          #    port: 8080
          #  initialDelaySeconds: 15
          #  timeoutSeconds: 1
          #livenessProbe:
          #  exec:
          #    command:
          #      - "/bin/true"
          #  initialDelaySeconds: 15
          #  timeoutSeconds: 1
      volumes:
        -
          name: podinfo
          downwardAPI:
            items:
              -
                path: "labels"
                fieldRef:
                  fieldPath: metadata.labels
              -
                path: "annotations"
                fieldRef:
                  fieldPath: metadata.annotations
      restartPolicy: "Always"
      dnsPolicy: "ClusterFirst"
  replicas: 1
  selector:
    name: "csohub"
  triggers:
    -
      type: "ConfigChange"
  strategy:
    type: "Rolling"
    rollingParams:
      updatePeriodSeconds: 1
      intervalSeconds: 1
      timeoutSeconds: 120
